# angles

./: Cargo.toml  LICENSE  README.md  maxima  shell.nix  solve.sh  sources  tan.maxima  test.maxima  test.py
benches/: acos.rs  asin.rs  atan.rs  cos.rs  sin.rs  tan.rs
src/: angle.rs  helpers.rs  lib.rs  main.rs  testing_main.rs  tests.rs
