[package]
name = "angles"
version = "0.1.0"
authors = ["Jordan Bray <jordan@northwoodmachine.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.20.0" }

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9.1"
quickcheck_macros = "0.9.1"
rand = "0.7.3"

[[bench]]
name = "asin"
harness = false

[[bench]]
name = "acos"
harness = false

[[bench]]
name = "atan"
harness = false

[[bench]]
name = "sin"
harness = false

[[bench]]
name = "cos"
harness = false

[[bench]]
name = "tan"
harness = false
