[package]
name = "integer_angles"
version = "0.1.0"
authors = ["Jordan Bray <jordanbray@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/angles/"
repository = "https://github.com/jordanbray/angles/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.20.0" }
serde_derive = "1"
serde = "1"

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9.1"
quickcheck_macros = "0.9.1"
rand = "0.7.3"

[[bench]]
name = "asin"
harness = false

[[bench]]
name = "acos"
harness = false

[[bench]]
name = "atan"
harness = false

[[bench]]
name = "sin"
harness = false

[[bench]]
name = "cos"
harness = false

[[bench]]
name = "tan"
harness = false
